--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "plugin"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [lib]
 name = "plugin"
@@ -13,6 +13,7 @@ base64 = "0.22"
 base64-serde = "0.8"
 chrono = { version = "0.4", features = ["serde"] }
 extism-pdk = "1.4"
+schemars = "1.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
